[package]
name = "ddns"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
public-ip = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
log = "0.4.0"