[package]
name = "ddns"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
public-ip = "0.2"
tokio = { version = "1.24", features = ["macros"] }
dotenv_codegen = "0.15"
env_logger = "0.10"
log = "0.4"
